--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             right: 5%;
             width: 90%;
             bottom: 5%;
-            height: 100px;
-            line-height: 100px;
+            height: 12vh;
+            line-height: 12vh;
             overflow:hidden;
             text-align: center;
             text-decoration: none !important;
-            font-family: "Museo-Sans-500","Helvetica Neue",Helvetica,Arial,sans-serif;
+            font-family: "Museo-Sans-300","Helvetica Neue",Helvetica,Arial,sans-serif;
             font-size: 20px;
             border-radius: 5px;
         }
