--- a/index.html
+++ b/index.html
@@ -537,9 +537,9 @@
         <!-- Add your site or application content here -->
         <!-- <div class='fb-messengermessageus' id='fb-messengermessageus' messenger_app_id='1678638095724206' page_id='1680036115640056' color='blue' size='standard'></div><script> window.fbAsyncInit = function() { FB.init({ appId : '1678638095724206', xfbml : true, version : 'v2.6' }); }; (function(d, s, id){ var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = '//connect.facebook.net/en_US/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script> -->
         <div id="wrapper" style="width:100%; text-align:center">
-        <img src="landingpage.png" alt="REAchat" width=200px style="margin-top:100px;"/>
+        <img src="landingpage.png" alt="REAchat" width=300px style="margin-top:20%;"/>
         </div>
-        <a class="button-style" href="https://www.messenger.com/t/1680036115640056">Chat Now <i class="rui-icon rui-icon-arrow-right-small"></i></a>
+        <a class="button-style" href="https://www.messenger.com/t/1680036115640056">Open in Messenger <i class="rui-icon rui-icon-arrow-right-small"></i></a>
 
         <!-- <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
